--- a/styles/style.css
+++ b/styles/style.css
@@ -9,16 +9,17 @@ html {
     box-sizing: border-box;
     font-family: "Quicksand", serif;
 }
-body{
-    border: 1px solid black;
-}
-/* Navigation Style */
 
+/* Navigation Style */
 nav, .nav-about, .nav-title, .nav-li>ul{
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px 0;
+}
+nav{
+    padding: 0 60px;
+    margin: 10px auto;
 }
 .nav-about{
     width: 100%;
@@ -51,6 +52,36 @@ nav button{
 }
 .hamburger{
     display: none;
+}
+
+
+/* Marquee Section Style */
+.marquee{
+    position: relative;
+    background-color: #FEA301;
+    overflow: hidden;
+    width: 100%;
+    white-space: nowrap;
+    font-size: 1rem;
+}
+.marquee-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    white-space: nowrap;
+    gap: 50px;
+    animation: scroll-left 10s linear infinite;
+}
+@keyframes scroll-left {
+    0%{
+        transform: translateX(0);
+    }
+    25%{
+        transform: translateX(-25%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
 }
 
 
@@ -240,7 +271,7 @@ nav button{
 
 /* Footer Section Style */
 .footer-container{
-    border: 1px solid black;
+    
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     /* align-items: center;
@@ -343,6 +374,12 @@ nav button{
         font-size: 1rem;
         font-weight: 600;
     }
+
+    /* Maquee Responsive Style */
+    .marquee{
+        font-size: 0.7rem;
+    }
+
     /* Banner Responsive */
     .banner{
         flex-direction: column-reverse;
@@ -422,6 +459,7 @@ nav button{
     .footer-container{
         grid-template-columns: repeat(1, 1fr);
         justify-content: flex-start;
+        margin: 0;
         padding: 20px;
     }
     .foot-container-1, .foot-container-2, .foot-container-3{
