--- a/styles/style.css
+++ b/styles/style.css
@@ -460,9 +460,12 @@ nav button{
         grid-template-columns: repeat(1, 1fr);
         justify-content: flex-start;
         margin: 0;
-        padding: 20px;
+        padding: 20px 10px 20px 15px;
     }
     .foot-container-1, .foot-container-2, .foot-container-3{
         margin: 0 0 25px 0;
+    }
+    .foot-container-1 p{
+        text-align: justify;
     }
 }
